# todo-app-rust

./: .env  Cargo.toml
src/: config.rs  main.rs  swagger.rs
src/db/: mod.rs  model.rs  queries.rs
src/routes/: todos.rs
